<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PersonalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp">
            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_launcher_background"/>
        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="昵称昵称昵称"
                android:textSize="30dp"/>
            <TextView
                android:id="@+id/user_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="手机号手机号"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/selling_good_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:text="@string/selling_good_btn"/>
    <Button
        android:id="@+id/sell_good_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:text="@string/sell_good_btn"/>
    <Button
        android:id="@+id/collect_good_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:text="@string/collect_good_btn"/>
    <Button
        android:id="@+id/lookover_good_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25dp"
        android:text="@string/lookover_good_btn"/>

</LinearLayout>